--- a/app/src/main/res/layout/buy_and_sell_show_item.xml
+++ b/app/src/main/res/layout/buy_and_sell_show_item.xml
@@ -40,11 +40,11 @@
             android:layout_marginLeft="@dimen/padding_large">
 
             <ImageView
+                android:adjustViewBounds="true"
                 android:id="@+id/imageView_buy_and_sell_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:background="@drawable/naqdi"/>
+                android:layout_width="@dimen/dimen_xxmedium"
+                android:layout_height="match_parent"
+                android:src="@drawable/buy_image"/>
 
         </LinearLayout>
 
@@ -174,9 +174,10 @@
 
 
             <ImageView
+                android:adjustViewBounds="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/shape_arrow_drop_down"
+                android:src="@drawable/arrow_left_image"
                 android:backgroundTint="@color/primary_dark"
                 android:padding="@dimen/padding_medium"/>
 
