--- a/app/src/main/res/drawable/shape_underline_dashed.xml
+++ b/app/src/main/res/drawable/shape_underline_dashed.xml
@@ -8,8 +8,8 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:dashGap="5dp"
-                android:dashWidth="1dp"
-                android:width="1dp"
+                android:dashWidth="@dimen/padding_xbit"
+                android:width="@dimen/padding_xbit"
                 android:color="@color/primary_text"
                 />
 
