--- a/app/src/main/res/layout/buy_and_sell_3rd_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_3rd_layout.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layoutDirection="rtl"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/icons">
 
     <LinearLayout
         android:id="@+id/linearLayout_titleBar"
@@ -39,7 +40,7 @@
                 android:padding="@dimen/padding_large"
                 android:orientation="vertical"
                 android:layout_width="0dp"
-                android:layout_weight="2"
+                android:layout_weight="4"
                 android:layout_height="wrap_content">
 
                 <TextView
