--- a/app/src/main/res/layout/buy_and_sell_show_item.xml
+++ b/app/src/main/res/layout/buy_and_sell_show_item.xml
@@ -49,7 +49,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="5"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="vertical">
@@ -59,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape_underline"
+                android:backgroundTint="@color/shiri"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -80,6 +82,7 @@
                     android:gravity="center_vertical"
                     android:text="265189532"
                     android:textStyle="bold"
+                    android:maxLines="1"
                     android:textColor="@color/primary_text"
                     android:textSize="@dimen/font_medium" />
             </LinearLayout>
@@ -115,6 +118,7 @@
                     android:gravity="center_vertical"
                     android:paddingRight="@dimen/padding_bit"
                     android:text="150,000,000,000"
+                    android:maxLines="1"
                     android:textColor="@color/primary_text"
                     android:textSize="@dimen/font_medium" />
 
@@ -156,6 +160,7 @@
                         android:gravity="center_vertical"
                         android:paddingRight="@dimen/padding_bit"
                         android:text="نوید مندیس"
+                        android:maxLines="1"
                         android:textColor="@color/primary_text"
                         android:textSize="@dimen/font_medium" />
                 </LinearLayout>
@@ -166,7 +171,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1.2"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/padding_large"
             android:gravity="left">
