--- a/app/src/main/res/layout/buy_and_sell_4th_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_4th_layout.xml
@@ -5,7 +5,8 @@
     android:layoutDirection="rtl"
     android:padding="@dimen/padding_large"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/icons">
 
     <LinearLayout
         android:id="@+id/linearLayout_titleBar"
@@ -103,8 +104,17 @@
 
     </LinearLayout>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView_accountSide"
+        android:id="@+id/recyclerView_buy_and_sell_4th"
         android:layout_marginBottom="@dimen/padding_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -138,6 +148,7 @@
                 android:textSize="@dimen/font_medium"
                 android:textColor="@color/primary_text"/>
             <TextView
+                android:id="@+id/textView_order_list_jame_radif_4th"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5"
@@ -169,6 +180,7 @@
                 android:textSize="@dimen/font_medium"
                 android:textColor="@color/primary_text"/>
             <TextView
+                android:id="@+id/textView_order_list_jame_meghdar_4th"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="38"
@@ -200,6 +212,7 @@
                 android:textSize="@dimen/font_medium"
                 android:textColor="@color/primary_text"/>
             <TextView
+                android:id="@+id/textView_order_list_jame_mablagh_4th"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="150,000,000"
@@ -211,6 +224,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout_order_list_tayid_4th"
         android:layout_marginTop="@dimen/padding_spinner"
         android:padding="@dimen/padding_large"
         android:gravity="center"
@@ -233,6 +247,10 @@
             android:textColor="@color/icons"/>
 
     </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 
 </LinearLayout>
