--- a/app/src/main/res/layout/buy_and_sell_show_layout.xml
+++ b/app/src/main/res/layout/buy_and_sell_show_layout.xml
@@ -9,7 +9,6 @@
     android:paddingLeft="@dimen/padding_bit">
 
     <LinearLayout
-        android:id="@+id/linearLayout_buy_and_sell_show_layout"
         android:paddingTop="@dimen/padding_medium"
         android:paddingBottom="@dimen/padding_large"
         android:layout_marginBottom="@dimen/padding_large"
@@ -69,7 +68,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView_buy_and_sell"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 
